--- a/about/index.html
+++ b/about/index.html
@@ -12,12 +12,12 @@
   <meta property="og:url" content="">
   <meta property="og:image" content="">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="manifest" href="../site.webmanifest">
+  <link rel="apple-touch-icon" href="../icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -26,9 +26,9 @@
 
   <!-- Add your site or application content here -->
   <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="../js/plugins.js"></script>
+  <script src="../js/main.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
@@ -36,6 +36,91 @@
     ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
+  <!doctype html>
+  <html class="no-js" lang="">
+  
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+    <meta property="og:title" content="">
+    <meta property="og:type" content="">
+    <meta property="og:url" content="">
+    <meta property="og:image" content="">
+  
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="apple-touch-icon" href="icon.png">
+    <!-- Place favicon.ico in the root directory -->
+  
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/main.css">
+  
+    <meta name="theme-color" content="#fafafa">
+  </head>
+  
+  <body>
+  
+    <!-- Add your site or application content here -->
+  
+    <script src="js/vendor/modernizr-3.11.2.min.js"></script>
+    <script src="js/plugins.js"></script>
+    <script src="js/main.js"></script>
+  
+    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+    <script>
+      window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+      ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+    </script>
+    <script src="https://www.google-analytics.com/analytics.js" async></script>
+  <header>
+    <div class="content-wrapper">
+      <a href="#"><img src="assets/unpluggedlogo.png" alt= "unplugged logo"></a>
+      <h1>unplugged</h1>
+      <nav>
+        <ul>
+          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
+          <li><a href="about/index.html" target="_blank">About</a></li>
+        </ul>
+      </nav>
+      <h1>Retreat from the desk, return refreshed.</h1>
+    </div>
+  </header>
+  <main>
+    <selection>
+  
+    </selection>
+    <aside>
+  
+    </aside>
+  </main>
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <address class="contact">
+          <h2>Contact</h2>
+          <p>555-555-5555</p>
+          <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
+        </address>
+       <div class="social">
+          <div class="social-icons">
+            <h2>Social</h2>
+            <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+            <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
+            <p><a href="https://www.instagram.com/yoursite" target="_blank"></a></p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="copyright">
+      <p>Copyright 2019 | Unplugged</p>
+    </div>
+  </footer>
+  </body>
+  
+  </html>
+  
 </body>
 
 </html>
