fixed class names

--- a/about/index.html
+++ b/about/index.html
@@ -88,9 +88,9 @@
     </div>
   </header>
   <main>
-    <selection>
+    <section>
   
-    </selection>
+    </section>
     <aside>
   
     </aside>
