--- a/faq/index.html
+++ b/faq/index.html
@@ -88,9 +88,9 @@
     </div>
   </header>
   <main>
-    <selection>
+    <section>
   
-    </selection>
+    </section>
     <aside>
   
     </aside>
