added main section

--- a/about/index.html
+++ b/about/index.html
@@ -25,17 +25,7 @@
 <body>
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="../js/plugins.js"></script>
-  <script src="../js/main.js"></script>
-
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
+  
   <!doctype html>
   <html class="no-js" lang="">
   
@@ -61,36 +51,57 @@
   </head>
   
   <body>
-  
-    <!-- Add your site or application content here -->
-  
-    <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
-  
-    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-    <script>
-      window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-      ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-    </script>
-    <script src="https://www.google-analytics.com/analytics.js" async></script>
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="assets/unpluggedlogo.png" alt= "unplugged logo"></a>
-      <h1>unplugged</h1>
-      <nav>
-        <ul>
-          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank">About</a></li>
-        </ul>
-      </nav>
-      <h1>Retreat from the desk, return refreshed.</h1>
-    </div>
+      <a href="#"><img src="../assets/unpluggedlogo.png" alt= "unplugged logo"></a>
+      <div class="header-divider">
+        <nav>
+          <ul>
+            <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+            <li><a href="index.html" target="_blank">About</a></li>
+          </ul>
+        </nav>
+      </div><!--header-divider-->
+    </div><!--content-wrapper-->
   </header>
   <main>
-    <section>
-  
-    </section>
+     <section class="mission">
+        <div class="content-wrapper">
+            <div class="mission content">
+              <h2>Our Mission -- we want to make you the team you always wanted to be.</h2>
+              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+
+              <p>Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a,</p>
+            </div>
+        </div><!--mission content wrapper ends-->
+      </section><!--mission-->
+      <section class="map">
+        <figure>
+
+        </figure>
+
+      </section><!--map-->
+      <section class="contact-section">
+        <div class="content-wrapper">
+          <h3>Contact us, because you all need this.</h3>
+          <div class="general-info">
+            <h4>General Information</h4>
+            <address>
+              <p>333 Main St, Lake Geneva, WI 53147</p>
+              <p>555-555-5555</p>
+              <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
+            </address>
+          </div><!--general-info-->
+          <div class="facilitator">
+            <h4>Chat with a Facilitator</h4>
+              <address>
+                <p>555-555-5555</p>
+                <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
+              </address>
+          </div><!--facilitator-->
+        </div><!--content wrapper---->
+      </section>
+    </div>
     <aside>
   
     </aside>
@@ -99,7 +110,7 @@
     <div class="content-wrapper">
       <div class="footer-content">
         <address class="contact">
-          <h2>Contact</h2>
+          <h4>Contact</h4>
           <p>555-555-5555</p>
           <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
         </address>
@@ -117,10 +128,18 @@
       <p>Copyright 2019 | Unplugged</p>
     </div>
   </footer>
+  <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
+  <script src="../js/plugins.js"></script>
+  <script src="../js/main.js"></script>
+
+  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+  <script>
+    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
+  </script>
+  <script src="https://www.google-analytics.com/analytics.js" async></script>
   </body>
   
   </html>
   
-</body>
 
-</html>
