--- a/faq/index.html
+++ b/faq/index.html
@@ -23,9 +23,61 @@
 </head>
 
 <body>
-
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <div class="content-wrapper">
+      <a href="#"><img src="../assets/unpluggedlogo.png" alt= "unplugged logo"></a>
+     
+      <nav>
+        <ul>
+          <li><a href="index.html" target="_blank">FAQ</a></li>
+          <li><a href="../about/index.html" target="_blank">About</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main class="faq">
+    <div class="content-wrapper">
+      <h2>Frequesntly Asked Quesions</h2>
+        <div class="question-answer">
+            <h4>How do I get to the Unplugged retreat?</h4>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,</p>
+        </div>
+        <div class="question-answer">
+           <h4>What kind of team is right for the Unplugged retreat?</h4>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,</p>
+       </div>
+       <div class="question-answer">
+            <h4>What size teams can you accommodate?</h4>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,</p>
+        </div>
+        <div class="question-answer">
+          <h4>Is there really no wifi available?</h4>
+          <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,</p>
+        </div>
+      </div><!--faq content-wrapper-->
+  </main>
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <address class="contact">
+          <h4>Contact</h4>
+          <p>555-555-5555</p>
+          <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
+        </address>
+       <div class="social">
+          <div class="social-icons">
+            <h4>Social</h4>
+            <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
+            <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
+            <p><a href="https://www.instagram.com/yoursite" target="_blank"></a></p>
+          </div>
+        </div><!--end social-->
+      </div><!--end footer-content-->
+    </div><!--end content wrapper-->
+    <div class="copyright">
+      <p>Copyright 2019 | Unplugged</p>
+    </div>
+  </footer>
   <script src="../js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="../js/plugins.js"></script>
   <script src="../js/main.js"></script>
@@ -36,87 +88,6 @@
     ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
-  <!doctype html>
-  <html class="no-js" lang="">
-  
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-    <meta property="og:title" content="">
-    <meta property="og:type" content="">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
-  
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="apple-touch-icon" href="icon.png">
-    <!-- Place favicon.ico in the root directory -->
-  
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
-  
-    <meta name="theme-color" content="#fafafa">
-  </head>
-  
-  <body>
-  
-    <!-- Add your site or application content here -->
-  
-    <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/main.js"></script>
-  
-    <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-    <script>
-      window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-      ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-    </script>
-    <script src="https://www.google-analytics.com/analytics.js" async></script>
-  <header>
-    <div class="content-wrapper">
-      <a href="#"><img src="assets/unpluggedlogo.png" alt= "unplugged logo"></a>
-      <h1>unplugged</h1>
-      <nav>
-        <ul>
-          <li><a href="faq/index.html" target="_blank">FAQ</a></li>
-          <li><a href="about/index.html" target="_blank">About</a></li>
-        </ul>
-      </nav>
-      <h1>Retreat from the desk, return refreshed.</h1>
-    </div>
-  </header>
-  <main>
-    <section>
-  
-    </section>
-    <aside>
-  
-    </aside>
-  </main>
-  <footer>
-    <div class="content-wrapper">
-      <div class="footer-content">
-        <address class="contact">
-          <h2>Contact</h2>
-          <p>555-555-5555</p>
-          <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
-        </address>
-       <div class="social">
-          <div class="social-icons">
-            <h2>Social</h2>
-            <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
-            <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
-            <p><a href="https://www.instagram.com/yoursite" target="_blank"></a></p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="copyright">
-      <p>Copyright 2019 | Unplugged</p>
-    </div>
-  </footer>
   </body>
   
   </html>
