--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>unplugged about</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -21,47 +21,18 @@
 
   <meta name="theme-color" content="#fafafa">
 </head>
-
 <body>
-
-  <!-- Add your site or application content here -->
-  
-  <!doctype html>
-  <html class="no-js" lang="">
-  
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-    <meta property="og:title" content="">
-    <meta property="og:type" content="">
-    <meta property="og:url" content="">
-    <meta property="og:image" content="">
-  
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="apple-touch-icon" href="icon.png">
-    <!-- Place favicon.ico in the root directory -->
-  
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
-  
-    <meta name="theme-color" content="#fafafa">
-  </head>
-  
-  <body>
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="../assets/unpluggedlogo.png" alt= "unplugged logo"></a>
       <div class="header-divider">
+        <a href="#"><img src="../assets/unpluggedlogo.png" alt= "unplugged logo"></a>
+      </div><!--header-divider-->
         <nav>
           <ul>
             <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
             <li><a href="index.html" target="_blank">About</a></li>
           </ul>
         </nav>
-      </div><!--header-divider-->
     </div><!--content-wrapper-->
   </header>
   <main>
@@ -84,22 +55,22 @@
       <section class="contact-section">
         <div class="content-wrapper">
           <h3>Contact us, because you all need this.</h3>
-          <div class="general-info">
+          <div class="contact-content">
             <h4>General Information</h4>
             <address>
               <p>333 Main St, Lake Geneva, WI 53147</p>
               <p>555-555-5555</p>
               <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
             </address>
-          </div><!--general-info-->
-          <div class="facilitator">
+          </div><!--contact-content---->
+          <div class="contact-content">
             <h4>Chat with a Facilitator</h4>
               <address>
                 <p>555-555-5555</p>
                 <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
               </address>
-          </div><!--facilitator-->
-        </div><!--content wrapper---->
+          </div><!--contact-content---->
+        </div><!--content-wrapper---->
       </section>
     </div>
     <aside>
