--- a/css/index.html
+++ b/css/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Unplugged Homepage</title>
+  <title>Unplugged homepage</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -28,8 +28,9 @@
 
  <header>
   <div class="content-wrapper">
-    <a href="#"><img src="" alt ="unplugged logo"/></a>
-    <div class="header-divider"></div> 
+    <div class="header-divider">
+      <a href="#"><img src="" alt ="unplugged logo"/></a>
+    </div> 
       <nav>
         <ul class="content-wrapper">
           <li><a href="faq/index.html" target="_blank">FAQ</a></li>
@@ -56,7 +57,7 @@
       </div>
       <div class="form">
         <div>
-        <h3> Find out more</h3></div>
+          <h3> Find out more</h3></div>
         <div>
           <input type="text" name="name" value="email address">
           <input type="button" value="Download Itinerary">
