standardized class names

--- a/about/index.html
+++ b/about/index.html
@@ -24,27 +24,24 @@
 <body>
   <header>
     <div class="content-wrapper">
-      <div class="header-divider">
         <a href="#"><img src="../assets/unpluggedlogo.png" alt= "unplugged logo"></a>
-      </div><!--header-divider-->
+        <div class="header-divider"></div>
         <nav>
           <ul>
             <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
             <li><a href="index.html" target="_blank">About</a></li>
           </ul>
         </nav>
-    </div><!--content-wrapper-->
+    </div>
   </header>
   <main>
      <section class="mission">
         <div class="content-wrapper">
-            <div class="mission content">
               <h2>Our Mission -- we want to make you the team you always wanted to be.</h2>
               <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
 
               <p>Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a,</p>
-            </div>
-        </div><!--mission content wrapper ends-->
+        </div>
       </section><!--mission-->
       <section class="map">
         <figure>
@@ -55,28 +52,23 @@
       <section class="contact-section">
         <div class="content-wrapper">
           <h3>Contact us, because you all need this.</h3>
-          <div class="contact-content">
-            <h4>General Information</h4>
-            <address>
-              <p>333 Main St, Lake Geneva, WI 53147</p>
-              <p>555-555-5555</p>
-              <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
-            </address>
-          </div><!--contact-content---->
-          <div class="contact-content">
-            <h4>Chat with a Facilitator</h4>
-              <address>
+          <address class="contact-content">
+              <div>
+                <h4>General Information</h4>
+                <p>333 Main St, Lake Geneva, WI 53147</p>
                 <p>555-555-5555</p>
                 <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
-              </address>
-          </div><!--contact-content---->
+              </div>
+              <div>
+                <h4>Chat with a Facilitator</h4>
+                <p>555-555-5555</p>
+                <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
+              </div>
+            </address>
         </div><!--content-wrapper---->
       </section>
-    </div>
-    <aside>
-  
-    </aside>
   </main>
+
   <footer>
     <div class="content-wrapper">
       <div class="footer-content">
@@ -86,15 +78,15 @@
           <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
         </address>
        <div class="social">
+          <h2>Social</h2>
           <div class="social-icons">
-            <h2>Social</h2>
             <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
             <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
             <p><a href="https://www.instagram.com/yoursite" target="_blank"></a></p>
           </div>
-        </div>
-      </div>
-    </div>
+        </div><!-- Social -->
+      </div><!-- Footer-content-->
+    </div><!-- content-wrapper-->
     <div class="copyright">
       <p>Copyright 2019 | Unplugged</p>
     </div>
