--- a/index.html
+++ b/index.html
@@ -36,34 +36,32 @@
           <li><a href="about/index.html" target="_blank">About</a></li>
         </ul>
       </nav> 
-      <section class="hero-area">
-        <div class="content-wrapper">
-          <h1> Retreat from the desk, return refreshed.</h1>
-          <img src="img/#"/>
-        </div>
-      </section>
     </div>
 </header>
 
 <main>
+
+  <section class="hero-area">
+    <div class="content-wrapper">
+      <h1> Retreat from the desk, return refreshed.</h1>
+      <img src="img/#"/>
+    </div>
+  </section>
+
   <aside>
     <div class="content-wrapper">
       <div class="form-description">
-        <div>
-          <h3>Want to join the next retreat?</h3></div>
-        <div>
-          <p>Find out when we are holding our next retreat and how your company or team can sign up!</p></div>
+          <h3>Want to join the next retreat?</h3>
+          <p>Find out when we are holding our next retreat and how your company or team can sign up!</p>
       </div>
       <div class="form">
-        <div>
-        <h3> Find out more</h3></div>
-        <div>
+        <h3> Find out more</h3>
           <input type="text" name="name" value="email address">
           <input type="button" value="Download Itinerary">
-          </div>
       </div>
     </div>
   </aside>
+  
   <section class="features">
     <div class="content-wrapper">
       <h2>Have the work week you always dreamed of -- without the bad wifi.</h2>
@@ -116,15 +114,15 @@
         <a href="mailto:hello@unplugged.com">hello@unplugged.com</a></p>
       </address>
      <div class="social">
-        <div class="social-icons">
           <h4>Social</h4>
+        <div class="social-icons">
           <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
           <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
           <p><a href="https://www.instagram.com/yoursite" target="_blank"></a></p>
         </div>
-      </div>
-    </div>
-  </div>
+      </div><!--social-->
+    </div><!--footer-content-->
+  </div><!--content wrapper-->
   <div class="copyright">
     <p>Copyright 2019 | Unplugged</p>
   </div>
