--- a/faq/index.html
+++ b/faq/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged FAQ</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -26,7 +26,7 @@
   <header>
     <div class="content-wrapper">
       <a href="#"><img src="../assets/unpluggedlogo.png" alt= "unplugged logo"></a>
-     
+     <div class="header-divider"></div>
       <nav>
         <ul>
           <li><a href="index.html" target="_blank">FAQ</a></li>
@@ -35,22 +35,23 @@
       </nav>
     </div>
   </header>
+  
   <main class="faq">
     <div class="content-wrapper">
       <h2>Frequesntly Asked Quesions</h2>
-        <div class="question-answer">
+        <div class="faq-content">
             <h4>How do I get to the Unplugged retreat?</h4>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,</p>
         </div>
-        <div class="question-answer">
+        <div class="faq-content">
            <h4>What kind of team is right for the Unplugged retreat?</h4>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,</p>
        </div>
-       <div class="question-answer">
+       <div class="faq-content">
             <h4>What size teams can you accommodate?</h4>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,</p>
         </div>
-        <div class="question-answer">
+        <div class="faq-content">
           <h4>Is there really no wifi available?</h4>
           <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,</p>
         </div>
@@ -65,8 +66,8 @@
           <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
         </address>
        <div class="social">
+          <h4>Social</h4>
           <div class="social-icons">
-            <h4>Social</h4>
             <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
             <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
             <p><a href="https://www.instagram.com/yoursite" target="_blank"></a></p>
