added spacing styles

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       </div>
       <div class="form">
         <h3> Find out more</h3>
-          <input type="text" name="name" value="email address">
+          <input type="text" name="name" value="name@email.com">
           <input type="button" value="Download Itinerary">
       </div>
     </div>
@@ -98,8 +98,8 @@
       <h2>Be a better team in 5 days, like these.</h2>
        <article>
          <div class="review">
-            <h3>LaCrue Bottling Co.  October 2017</h3>
-            <p>Paragraph of text </p>
+            <h3>LaCrue Bottling Co.<br>October 2017</h3>
+            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
          </div>
         </article>
     </div>
