=modification for tablet

--- a/about/index.html
+++ b/about/index.html
@@ -65,7 +65,7 @@
                 <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
               </div>
             </address>
-        </div><!--content-wrapper---->
+        </div><!--content-wrapper-->
       </section>
   </main>
 
