--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&family=Poppins&display=swap" rel="stylesheet">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -44,7 +45,7 @@
   <section class="hero-area">
     <div class="content-wrapper">
       <h1> Retreat from the desk, return refreshed.</h1>
-      <img src="img/#"/>
+      <img src="img/#" alt="bridge photo"/>
     </div>
   </section>
 
@@ -79,8 +80,8 @@
           <p class="features-item-description">Private chef team providing on demand meals - just like your team kitchen.</p>
         </article>
         <article>
-          <p class="fontawsome-icon">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
-          <p class="features-item-description"></p>
+          <p class="fontawsome-icon"></p>
+          <p class="features-item-description">5 outdoor obstacle courses, including private beach 1/2 mile from bungalow.</p>
         </article>
         <article>
           <p class="fontawsome-icon"></p>
@@ -97,10 +98,11 @@
     <div class="content wrapper">
       <h2>Be a better team in 5 days, like these.</h2>
        <article>
-         <div class="review">
+        
+           <img src="#" alt="team photo"/>
             <h3>LaCrue Bottling Co.<br>October 2017</h3>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
-         </div>
+       
         </article>
     </div>
   </section>
