added flex styles to tablet pages

--- a/index.html
+++ b/index.html
@@ -97,13 +97,13 @@
   <section class="reviews">
     <div class="content wrapper">
       <h2>Be a better team in 5 days, like these.</h2>
-       <article>
-        
-           <img src="#" alt="team photo"/>
+       <article class= "review-content">
+           <div><img src="#" alt="team photo"/></div>
+           <div>
             <h3>LaCrue Bottling Co.<br>October 2017</h3>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
-       
-        </article>
+           </div>
+          </article>
     </div>
   </section>
 </main>
