--- a/about/index.html
+++ b/about/index.html
@@ -18,6 +18,8 @@
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&family=Poppins&display=swap" rel="stylesheet">
+
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -40,7 +42,7 @@
               <h2>Our Mission -- we want to make you the team you always wanted to be.</h2>
               <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
 
-              <p>Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a,</p>
+              <p>Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus</p>
         </div>
       </section><!--mission-->
       <section class="map">
@@ -54,13 +56,13 @@
           <h2>Contact us, because you all need this.</h2>
           <address class="contact-content">
               <div>
-                <h4>General Information</h4>
+                <h3>General Information</h3>
                 <p>333 Main St, Lake Geneva, WI 53147</p>
                 <p>555-555-5555</p>
                 <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
               </div>
               <div>
-                <h4>Chat with a Facilitator</h4>
+                <h3>Chat with a Facilitator</h3>
                 <p>555-555-5555</p>
                 <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
               </div>
@@ -73,12 +75,12 @@
     <div class="content-wrapper">
       <div class="footer-content">
         <address class="contact">
-          <h4>Contact</h4>
+          <h3>Contact</h3>
           <p>555-555-5555</p>
           <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
         </address>
        <div class="social">
-          <h2>Social</h2>
+          <h3>Social</h3>
           <div class="social-icons">
             <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
             <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
