--- a/faq/index.html
+++ b/faq/index.html
@@ -18,6 +18,7 @@
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400&family=Poppins&display=swap" rel="stylesheet">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -38,7 +39,7 @@
   
   <main class="faq">
     <div class="content-wrapper">
-      <h2>Frequesntly Asked Quesions</h2>
+      <h2>Frequently Asked Quesions</h2>
         <div class="faq-content">
             <h4>How do I get to the Unplugged retreat?</h4>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis,</p>
@@ -61,12 +62,12 @@
     <div class="content-wrapper">
       <div class="footer-content">
         <address class="contact">
-          <h4>Contact</h4>
+          <h3>Contact</h3>
           <p>555-555-5555</p>
           <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
         </address>
        <div class="social">
-          <h4>Social</h4>
+          <h3>Social</h3>
           <div class="social-icons">
             <p><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
             <p><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
