--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -95,7 +95,7 @@
     </div>
   </section>
   <section class="reviews">
-    <div class="content wrapper">
+    <div class="content-wrapper">
       <h2>Be a better team in 5 days, like these.</h2>
        <article class= "review-content">
            <div><img src="#" alt="team photo"/></div>
