--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@500;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -29,7 +29,9 @@
 
  <header>
   <div class="content-wrapper">
-    <a href="#"><img src="" alt ="unplugged logo"/></a>
+    <figure>
+      <img src="img/unpluggedlogo.png" alt ="Unplugged logo"/>
+    </figure>
     <div class="header-divider"></div> 
       <nav>
         <ul>
@@ -45,7 +47,6 @@
   <section class="hero-area">
     <div class="content-wrapper">
       <h1> Retreat from the desk, return refreshed.</h1>
-      <img src="img/#" alt="bridge photo"/>
     </div>
   </section>
 
@@ -65,7 +66,7 @@
   
   <section class="features">
     <div class="content-wrapper">
-      <h2>Have the work week you always dreamed of -- without the bad wifi.</h2>
+      <h2>Have the work week you always dreamed of &mdash; without the bad wifi.</h2>
       <div class="features-items">
         <article>
           <p class="fontawsome-icon"></p>
@@ -97,11 +98,13 @@
   <section class="reviews">
     <div class="content-wrapper">
       <h2>Be a better team in 5 days, like these.</h2>
+      <figure>
+        <img src="img/omar-lopez-web-296944-unsplash.jpg" alt="team photo" />
+      </figure>
        <article class= "review-content">
-           <div><img src="#" alt="team photo"/></div>
-           <div>
+          <div>
             <h3>LaCrue Bottling Co.<br>October 2017</h3>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
+            <p> Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aeneanommodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean.</p>
            </div>
           </article>
     </div>
