--- a/about/index.html
+++ b/about/index.html
@@ -18,7 +18,7 @@
 
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
 
 
   <meta name="theme-color" content="#fafafa">
@@ -26,7 +26,9 @@
 <body>
   <header>
     <div class="content-wrapper">
-        <a href="#"><img src="../assets/unpluggedlogo.png" alt= "unplugged logo"></a>
+      <figure>
+        <img src="../img/unpluggedlogo.png" alt ="Unplugged logo"/>
+      </figure>
         <div class="header-divider"></div>
         <nav>
           <ul>
@@ -49,9 +51,8 @@
       </section><!--mission-->
       <section class="map">
         <figure>
-
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47005.0498742409!2d-88.46144700896953!3d42.58043591880977!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880584e9f85c4509%3A0x9eb9a6efc12afe43!2sLake%20Geneva%2C%20WI%2053147%2C%20USA!5e0!3m2!1sen!2sil!4v1600933780163!5m2!1sen!2sil" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </figure>
-
       </section><!--map-->
       <section class="contact-section">
         <div class="content-wrapper">
