--- a/faq/index.html
+++ b/faq/index.html
@@ -19,14 +19,16 @@
   <link rel="stylesheet" href="../css/normalize.css">
   <link rel="stylesheet" href="../css/main.css">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
-
+  <script src="https://kit.fontawesome.com/c6c59dfde9.js" crossorigin="anonymous"></script>
   <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
   <header>
     <div class="content-wrapper">
-      <a href="#"><img src="../assets/unpluggedlogo.png" alt= "unplugged logo"></a>
+      <figure>
+        <img src="../img/unpluggedlogo.png" alt ="Unplugged logo"/>
+      </figure>
      <div class="header-divider"></div>
       <nav>
         <ul>
