--- a/index.html
+++ b/index.html
@@ -133,9 +133,15 @@
      <div class="social">
           <h4>Social</h4>
         <div class="social-icons">
-          <p><i class="fab fa-facebook-f"></i><a href="https://www.facebook.com/yoursite" target="_blank"></a></p>
-          <p><i class="fab fa-twitter"></i><a href="https://www.twitter.com/yoursite" target="_blank"></a></p>
-          <p><i class="fab fa-instagram"></i><a href="https://www.instagram.com/yoursite" target="_blank"></a></p>
+          <p>
+            <a href="" target="_blank"><i class="fab fa-facebook-f"></i></a>
+          </p>
+          <p>
+            <a href="" target="_blank"><i class="fab fa-twitter"></i></a>
+          </p>
+          <p>
+            <a href="" target="_blank"><i class="fab fa-instagram"></i></a>
+          </p>
         </div>
       </div><!--social-->
     </div><!--footer-content-->
