--- a/about/index.html
+++ b/about/index.html
@@ -51,7 +51,7 @@
       </section><!--mission-->
       <section class="map">
         <figure>
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47005.0498742409!2d-88.46144700896953!3d42.58043591880977!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880584e9f85c4509%3A0x9eb9a6efc12afe43!2sLake%20Geneva%2C%20WI%2053147%2C%20USA!5e0!3m2!1sen!2sil!4v1600933780163!5m2!1sen!2sil" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2937.086149000683!2d-88.42648038485886!3d42.5959156791717!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88058bbef1e33f19%3A0xa9e28adaef1aa0be!2s333%20Main%20St%2C%20Lake%20Geneva%2C%20WI%2053147%2C%20USA!5e0!3m2!1sen!2sil!4v1600961679818!5m2!1sen!2sil" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </figure>
       </section><!--map-->
       <section class="contact-section">
